# auth_service

./: .env  .gitignore  README.md  dev_docker-compose.yml  docker-compose.yml
auth_service/: .dockerignore  Dockerfile  alembic.ini  dev_Dockerfile  main.py  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: 0251ef51e1c7_images_type.py  0e3fbd86eaf7_create_account_table.py  205e71491890_token_bearer_entry_time.py  2214c952cad1_user_level.py  2804f8cdd452_init.py  35cfbc51085d_token_bearer_host_platform.py  3650e330d0e2_color.py  368d85121f71_color.py  3c1140133372_images.py  3c1d6dc17692_token.py  4612dc2c3391_client_title.py  762da65a267a_color.py  77dda20057de_images.py  7827daf34a1d_client_title.py  89aae8a6dd55_token.py  8d8adeead70c_added_account_table.py  91c063d2807d_spec.py  9c6ea0aee80a_token.py  9f34a0c00333_initial.py  bee3ed6b14e2_secret.py  cd19db92e5c8_images.py
auth_service/auth_service/: admin_create.py  dbormar.py  init_dir.py  models.py  my_validator.py  settings.py  settings_local.py  settings_prod.py
auth_service/auth_service/api/: apps.py  auth.py  background.py  colors.py  config.py  image.py  settings.py  user.py  user_config.py
auth_service/auth_service/depends/: auth.py
auth_service/auth_service/logic/: apps.py  auth.py  colors.py  config.py  image.py  mail.py  user.py  user_config.py
auth_service/auth_service/schemas/: apps.py  auth.py  base.py  colors.py  config.py  image.py  user.py  user_config.py
auth_service/auth_service/utils/: settings.py  without_keys.py
client/: .dockerignore  Dockerfile  (+3 more)
(+67 files in other folders)
